# OpenNI

./: CMakeLists.txt  README
Data/: GlobalDefaults.ini  Sample-Tracking.xml  Sample-User.xml  SamplesConfig.xml  modules.xml  modules.xml.mac
Nite/: CMakeLists.txt
Nite/Samples/Boxes/: main.cpp
Nite/Samples/CircleControl/: main.cpp
Nite/Samples/Players/: CMakeLists.txt
Platform/Win32/Install/: openFrameworks.bat
Samples/NiAudioSample/: CMakeLists.txt
Samples/NiBackRecorder/: CMakeLists.txt
Samples/NiConvertXToONI/: CMakeLists.txt
Samples/NiRecordSynthetic/: CMakeLists.txt
Samples/NiSampleModule/: CMakeLists.txt
Samples/NiSimpleCreate/: CMakeLists.txt
Samples/NiSimpleRead/: CMakeLists.txt
Samples/NiSimpleViewer/: CMakeLists.txt  NiSimpleViewer.cpp
Samples/NiUserTracker/: CMakeLists.txt  main.cpp
Samples/NiViewer/: CMakeLists.txt  NiViewer.cpp
Source/Modules/Common/: CMakeLists.txt
Source/Modules/nimCodecs/: CMakeLists.txt
Source/Modules/nimMockNodes/: CMakeLists.txt
Source/Modules/nimRecorder/: CMakeLists.txt
Source/OpenNI/: CMakeLists.txt  XnModuleLoader.cpp  XnModuleLoader.h
Source/OpenNI/Linux-x86/: Linux-x86Files.cpp
Source/OpenNI/Win32/: XnUSBWin32.cpp  XnUSBWin32.h
Source/Utils/niLicense/: CMakeLists.txt
Source/Utils/niReg/: CMakeLists.txt
